# test-monad-laws

./: .gitignore  LICENSE  README.md  checkers-mtl.cabal  stack-default.yaml  test-monad-laws.cabal
src/Test/: Checkers.hs  Mutants.hs  SmallList.hs
src/Test/Checkers/: Instances.hs
src/Test/Monad/: Base.hs  Cont.hs  Control.hs  Except.hs  Instances.hs  Morph.hs  Reader.hs  State.hs  Trans.hs  Writer.hs
src/Test/Monad/Cont/: Checkers.hs
src/Test/Monad/Control/: Checkers.hs  Mutants.hs
src/Test/Monad/Except/: Checkers.hs  Mutants.hs
src/Test/Monad/Reader/: Checkers.hs  Mutants.hs
src/Test/Monad/State/: Checkers.hs  Mutants.hs
src/Test/Monad/Trans/: Mutants.hs
src/Test/Monad/Writer/: Checkers.hs  Mutants.hs
test/: prism-error.hs  test.hs
