name:                checkers-mtl
version:             0.1.0.0
synopsis:
  Laws for monadic effects (`mtl`, freer) as testable properties.
description:         See README
homepage:            https://github.com/Lysxia/checkers-mtl#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2017 Li-yao Xia
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Test.Monad.Base
    Test.Monad.Control
    Test.Monad.Control.Checkers
    Test.Monad.Control.Mutants
    Test.Monad.Cont
    Test.Monad.Except
    Test.Monad.Except.Checkers
    Test.Monad.Except.Mutants
    Test.Monad.Instances
    Test.Monad.Reader
    Test.Monad.Reader.Checkers
    Test.Monad.Reader.Mutants
    Test.Monad.State
    Test.Monad.State.Checkers
    Test.Monad.State.Mutants
    Test.Monad.Writer
    Test.Monad.Writer.Checkers
    Test.Monad.Writer.Mutants
    Test.Monad.Trans
    Test.Monad.Trans.Mutants
    Test.Monad.Morph
    Test.Mutants
    Test.SmallList
  build-depends:
    monad-control,
    transformers,
    transformers-base,
    mtl,
    QuickCheck >= 2.12,
    quickcheck-higherorder,
    base >= 4.9 && < 5
  ghc-options:         -Wall -Wno-orphans
  default-language:    Haskell2010

test-suite checkers-mtl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:
    checkers-mtl,
    QuickCheck,
    tasty,
    tasty-quickcheck >= 0.9.2,
    base
  default-language:    Haskell2010

test-suite prism-error-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             prism-error.hs
  build-depends:
    checkers-mtl,
    mtl,
    QuickCheck,
    quickcheck-higherorder,
    tasty,
    tasty-quickcheck >= 0.9.2,
    base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/checkers-mtl
